--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Name: Micheal Antifaoff
 Student ID: 1542254
 CMPUT 274, Fall 2018
 
-Final Project: Arduino Asteroids
+Final Project: Arduino Invaders
 ----------------------------------------------------------------------------------
 Included Files:
     * asteroids.cpp : Includes these functions: 
